--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>ALJHON CAANGAY | Portfolio</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.scss">
     
 </head>
 <body>
@@ -262,6 +263,8 @@
             </div>
         </div>
     </section>
+
+    <script src="js/main.js"></script>
 
     
 </body>
