--- a/index.html
+++ b/index.html
@@ -628,10 +628,10 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="floating">
-                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 300 300'%3E%3Cdefs%3E%3ClinearGradient id='grad1' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23667eea;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23764ba2;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='150' cy='150' r='140' fill='url(%23grad1)' opacity='0.1'/%3E%3Ccircle cx='150' cy='150' r='100' fill='url(%23grad1)' opacity='0.3'/%3E%3Ccircle cx='150' cy='150' r='60' fill='url(%23grad1)'/%3E%3Ctext x='150' y='160' text-anchor='middle' fill='white' font-size='24' font-weight='bold'%3EAC%3C/text%3E%3C/svg%3E" alt="Profile" class="profile-img">
-                </div>
-            </div>
+    <div class="floating">
+        <img src="img/aljhon2.jpg" alt="Profile" class="profile-img">
+    </div>
+</div>
         </div>
     </section>
 
