Fix download link for resume by correcting filename in the download functionality

--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
         
         // Create a temporary link element
         const link = document.createElement('a');
-        link.href = 'pdf/My Resume.pdf';
+        link.href = 'pdf/My_Resume.pdf';
         link.download = 'Aljhon_Resume.pdf'; // This will be the downloaded filename
         
         // Trigger download
