Update education and work experience sections with new qualifications and roles

--- a/index.html
+++ b/index.html
@@ -986,89 +986,120 @@
     </section>
 
     <!-- Education Section -->
-    <section id="education" class="section" style="background: #f8f9fa">
-      <div class="container">
-        <div class="section-title">
-          <h2>Educational Background</h2>
-          <p>My academic journey and qualifications</p>
-        </div>
-        <div class="education-grid">
-          <div class="education-item">
-            <div class="education-header">
-              <div class="education-title">
-                <h3>Bachelor of Science in Information Technology</h3>
-                <div class="education-school">University of the Philippines</div>
-                <div class="education-location">Quezon City, Philippines</div>
-              </div>
-              <div class="education-year">2013 - 2017</div>
-            </div>
-            <div class="education-description">
-              Completed junior high school with honors. Developed early interest in computer science and mathematics. 
-              Participated in various science competitions and technology-related extracurricular activities.
-            </div>
+<section id="education" class="section" style="background: #f8f9fa">
+  <div class="container">
+    <div class="section-title">
+      <h2>Educational Background</h2>
+      <p>My academic journey and qualifications</p>
+    </div>
+    <div class="education-grid">
+      <div class="education-item">
+        <div class="education-header">
+          <div class="education-title">
+            <h3>Bachelor's Degree</h3>
+            <div class="education-school">Zamboanga Del Sur Provincial Government College</div>
+            <div class="education-location">Zamboanga del Sur, Philippines</div>
           </div>
+          <div class="education-year">2021 - 2025</div>
+        </div>
+        <div class="education-description">
+          Currently pursuing bachelor's degree with focus on developing comprehensive knowledge and skills. 
+          Actively engaged in academic activities and maintaining strong academic performance throughout the program.
         </div>
       </div>
-    </section>
 
-    <!-- Work Experience Section -->
-    <section id="experience" class="section">
-      <div class="container">
-        <div class="section-title">
-          <h2>Work Experience</h2>
-          <p>Professional journey and career highlights</p>
+      <div class="education-item">
+        <div class="education-header">
+          <div class="education-title">
+            <h3>Senior High School Diploma</h3>
+            <div class="education-school">Westprime Horizon Institute INC.</div>
+            <div class="education-location">Philippines</div>
+          </div>
+          <div class="education-year">2017 - 2019</div>
         </div>
-        <div class="experience-grid">
-          <div class="experience-item">
-            <div class="experience-header">
-              <div class="experience-title">
-                <h3>Full Stack Web Developer</h3>
-                <div class="experience-company">TechSolutions Inc.</div>
-                <div class="experience-location">Makati City, Philippines</div>
-              </div>
-              <div class="experience-year">2023 - Present</div>
-            </div>
-            <div class="experience-description">
-              Lead developer for multiple web applications using PHP, MySQL, JavaScript, and modern frameworks. 
-              Collaborated with cross-functional teams to deliver high-quality software solutions. 
-              Responsible for database design, API development, and user interface implementation.
-            </div>
-          </div>
-
-          <div class="experience-item">
-            <div class="experience-header">
-              <div class="experience-title">
-                <h3>Junior Web Developer</h3>
-                <div class="experience-company">Digital Creatives Studio</div>
-                <div class="experience-location">Quezon City, Philippines</div>
-              </div>
-              <div class="experience-year">2022 - 2023</div>
-            </div>
-            <div class="experience-description">
-              Developed responsive websites and web applications for various clients. 
-              Gained experience in HTML, CSS, JavaScript, and PHP. Worked closely with senior developers 
-              to implement best practices and coding standards.
-            </div>
-          </div>
-
-          <div class="experience-item">
-            <div class="experience-header">
-              <div class="experience-title">
-                <h3>Web Development Intern</h3>
-                <div class="experience-company">StartUp Hub Philippines</div>
-                <div class="experience-location">Taguig City, Philippines</div>
-              </div>
-              <div class="experience-year">2021 - 2022</div>
-            </div>
-            <div class="experience-description">
-              Assisted in the development of company website and internal tools. 
-              Learned modern web development practices, version control with Git, 
-              and agile development methodologies. Contributed to front-end improvements and bug fixes.
-            </div>
-          </div>
+        <div class="education-description">
+          Completed senior high school education with strong academic foundation. 
+          Developed critical thinking skills and prepared for higher education through comprehensive curriculum.
         </div>
       </div>
-    </section>
+
+      <div class="education-item">
+        <div class="education-header">
+          <div class="education-title">
+            <h3>High School Diploma</h3>
+            <div class="education-school">Norberta Guillar Memorial National High School</div>
+            <div class="education-location">Philippines</div>
+          </div>
+          <div class="education-year">2012 - 2016</div>
+        </div>
+        <div class="education-description">
+          Successfully completed secondary education with good academic standing. 
+          Participated in various school activities and developed foundational knowledge across multiple subjects.
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="education-header">
+          <div class="education-title">
+            <h3>Elementary Education</h3>
+            <div class="education-school">Nazareth Elementary School</div>
+            <div class="education-location">Philippines</div>
+          </div>
+          <div class="education-year">2005 - 2011</div>
+        </div>
+        <div class="education-description">
+          Completed primary education with strong fundamentals in core subjects. 
+          Developed early learning skills and enthusiasm for academic achievement.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+   <!-- Work Experience Section -->
+<section id="experience" class="section">
+  <div class="container">
+    <div class="section-title">
+      <h2>Work Experience</h2>
+      <p>Professional journey and career highlights</p>
+    </div>
+    <div class="experience-grid">
+      <div class="experience-item">
+        <div class="experience-header">
+          <div class="experience-title">
+            <h3>Liaison Officer</h3>
+            <div class="experience-company">Rose Travel and Tours</div>
+            <div class="experience-location">Philippines</div>
+          </div>
+          <div class="experience-year">2023 - 2024</div>
+        </div>
+        <div class="experience-description">
+          Served as primary liaison between the company and various stakeholders including clients, government agencies, and partner organizations. 
+          Managed administrative processes, coordinated travel arrangements, and ensured smooth communication channels. 
+          Handled documentation, permit processing, and maintained strong professional relationships with key contacts.
+        </div>
+      </div>
+
+      <div class="experience-item">
+        <div class="experience-header">
+          <div class="experience-title">
+            <h3>Sales Agent</h3>
+            <div class="experience-company">Clique Marketing Services (Globe BBSP)</div>
+            <div class="experience-location">Philippines</div>
+          </div>
+          <div class="experience-year">2020 - 2022</div>
+        </div>
+        <div class="experience-description">
+          Responsible for promoting and selling Globe telecommunications products and services. 
+          Achieved sales targets through effective customer engagement and product knowledge. 
+          Provided excellent customer service, handled inquiries, and maintained client relationships. 
+          Developed strong communication and negotiation skills while working in a fast-paced sales environment.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Skills Section -->
     <section id="skills" class="section" style="background: #f8f9fa">
@@ -1146,94 +1177,94 @@
       </div>
     </section>
 
-    <!-- Certificates & Awards Section -->
-    <section id="awards" class="section">
-      <div class="container">
-        <div class="section-title">
-          <h2>Certificates & Awards</h2>
-          <p>Recognition and certifications that showcase my expertise</p>
+   <!-- Certificates & Awards Section -->
+<section id="awards" class="section">
+  <div class="container">
+    <div class="section-title">
+      <h2>Certificates & Awards</h2>
+      <p>Recognition and certifications that showcase my expertise</p>
+    </div>
+    <div class="awards-grid">
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-trophy"></i>
         </div>
-        <div class="awards-grid">
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fas fa-trophy"></i>
-            </div>
-            <h3>Best Capstone Project</h3>
-            <div class="award-issuer">University of the Philippines</div>
-            <div class="award-year">2023</div>
-            <div class="award-description">
-              Awarded for developing an innovative Student Management System 
-              with advanced features and exceptional user experience design.
-            </div>
-          </div>
-
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fas fa-certificate"></i>
-            </div>
-            <h3>PHP Professional Certification</h3>
-            <div class="award-issuer">Zend Technologies</div>
-            <div class="award-year">2023</div>
-            <div class="award-description">
-              Certified PHP developer with proven expertise in modern PHP frameworks, 
-              object-oriented programming, and database integration.
-            </div>
-          </div>
-
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fas fa-medal"></i>
-            </div>
-            <h3>Web Development Bootcamp</h3>
-            <div class="award-issuer">Coursera - Meta</div>
-            <div class="award-year">2022</div>
-            <div class="award-description">
-              Completed comprehensive full-stack web development course covering 
-              HTML, CSS, JavaScript, React, and database management.
-            </div>
-          </div>
-
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fas fa-star"></i>
-            </div>
-            <h3>Programming Competition Winner</h3>
-            <div class="award-issuer">National IT Olympics</div>
-            <div class="award-year">2022</div>
-            <div class="award-description">
-              First place winner in the university-level programming competition, 
-              demonstrating exceptional problem-solving and coding skills.
-            </div>
-          </div>
-
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fab fa-js-square"></i>
-            </div>
-            <h3>JavaScript Algorithms Certificate</h3>
-            <div class="award-issuer">freeCodeCamp</div>
-            <div class="award-year">2021</div>
-            <div class="award-description">
-              Completed 300+ hours of JavaScript algorithms and data structures 
-              challenges, building solid foundation in programming logic.
-            </div>
-          </div>
-
-          <div class="award-item">
-            <div class="award-icon">
-              <i class="fas fa-graduation-cap"></i>
-            </div>
-            <h3>Dean's List</h3>
-            <div class="award-issuer">University of the Philippines</div>
-            <div class="award-year">2019-2023</div>
-            <div class="award-description">
-              Consistently maintained high academic performance throughout 
-              college years, earning Dean's List recognition for 6 semesters.
-            </div>
-          </div>
+        <h3>Best In Computer Programming</h3>
+        <div class="award-issuer">Academic Institution</div>
+        <div class="award-year">July 2025</div>
+        <div class="award-description">
+          Recognized for exceptional programming skills and outstanding 
+          performance in computer programming coursework and projects.
         </div>
       </div>
-    </section>
+
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-database"></i>
+        </div>
+        <h3>Snowflake Data Engineering Essentials</h3>
+        <div class="award-issuer">Snowflake</div>
+        <div class="award-year">December 2024</div>
+        <div class="award-description">
+          Successfully demonstrated ability to convert timezones, map locations via IP addresses,
+          create tasks and merge statements, and work with stream functionality.
+        </div>
+      </div>
+
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-lake"></i>
+        </div>
+        <h3>Snowflake Data Lake Essentials</h3>
+        <div class="award-issuer">Snowflake</div>
+        <div class="award-year">December 2024</div>
+        <div class="award-description">
+          Certified in creating and editing STAGE objects, querying GeoSpatial data,
+          working with external tables, materialized views, and Parquet data.
+        </div>
+      </div>
+
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-warehouse"></i>
+        </div>
+        <h3>Snowflake Data Warehouse Essentials</h3>
+        <div class="award-issuer">Snowflake</div>
+        <div class="award-year">October 2024</div>
+        <div class="award-description">
+          Hands-on certification demonstrating proficiency in creating tables and file formats,
+          compute resources, copy into statements, and transforming CSV and JSON data.
+        </div>
+      </div>
+
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-globe"></i>
+        </div>
+        <h3>8th International Online Conference 2024</h3>
+        <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
+        <div class="award-year">November 2024</div>
+        <div class="award-description">
+          Certificate of Participation in Contemporary Studies in Management (CoSiM) 
+          conference focusing on current management practices and innovations.
+        </div>
+      </div>
+
+      <div class="award-item">
+        <div class="award-icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <h3>Balancing Innovation and Ethics in AI</h3>
+        <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
+        <div class="award-year">August 2024</div>
+        <div class="award-description">
+          Participated in webinar on "Managing Risks and Ensuring Responsible AI Use in Education"
+          during Silliman University's 123rd Founders Day celebration.
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Projects Section -->
     <section id="projects" class="section" style="background: #f8f9fa">
