Update age in personal information and enhance awards section with links to certificates

--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@
               </div>
               <div class="info-item">
                 <strong>Age:</strong>
-                <span>23 years old</span>
+                <span>24 years old</span>
               </div>
               <div class="info-item">
                 <strong>Address:</strong>
@@ -1178,93 +1178,105 @@
     </section>
 
    <!-- Certificates & Awards Section -->
-<section id="awards" class="section">
-  <div class="container">
-    <div class="section-title">
-      <h2>Certificates & Awards</h2>
-      <p>Recognition and certifications that showcase my expertise</p>
-    </div>
-    <div class="awards-grid">
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-trophy"></i>
-        </div>
-        <h3>Best In Computer Programming</h3>
-        <div class="award-issuer">Academic Institution</div>
-        <div class="award-year">July 2025</div>
-        <div class="award-description">
-          Recognized for exceptional programming skills and outstanding 
-          performance in computer programming coursework and projects.
-        </div>
-      </div>
+    <section id="awards" class="section">
+        <div class="container">
+            <div class="section-title">
+                <h2>Certificates & Awards</h2>
+                <p>Recognition and certifications that showcase my expertise</p>
+            </div>
+            <div class="awards-grid">
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-trophy"></i>
+                    </div>
+                    <h3>Best In Computer Programming</h3>
+                    <div class="award-issuer">Academic Institution</div>
+                    <div class="award-year">July 2025</div>
+                    <div class="award-description">
+                        Recognized for exceptional programming skills and outstanding 
+                        performance in computer programming coursework and projects.
+                    </div>
+                </div>
 
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-database"></i>
-        </div>
-        <h3>Snowflake Data Engineering Essentials</h3>
-        <div class="award-issuer">Snowflake</div>
-        <div class="award-year">December 2024</div>
-        <div class="award-description">
-          Successfully demonstrated ability to convert timezones, map locations via IP addresses,
-          create tasks and merge statements, and work with stream functionality.
-        </div>
-      </div>
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-database"></i>
+                    </div>
+                    <h3>Snowflake Data Engineering Essentials</h3>
+                    <div class="award-issuer">Snowflake</div>
+                    <div class="award-year">December 2024</div>
+                    <div class="award-description">
+                        Successfully demonstrated ability to convert timezones, map locations via IP addresses,
+                        create tasks and merge statements, and work with stream functionality.
+                    </div>
+                    <a href="https://achieve.snowflake.com/035477d2-5841-4e60-8516-f5d0f5863e2c?fbclid=IwY2xjawKz7qdleHRuA2FlbQIxMQABHr5ZoFZ7gG440hHCWTgITNkGnkdiFvx0adPJ97XXt7KUEm06o6-9otzMsE1M_aem_1ZFj9wC6kIi31yt7bTJqqw#acc.f8hRNcIo" 
+                       class="certificate-link" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-external-link-alt"></i>View Certificate
+                    </a>
+                </div>
 
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-lake"></i>
-        </div>
-        <h3>Snowflake Data Lake Essentials</h3>
-        <div class="award-issuer">Snowflake</div>
-        <div class="award-year">December 2024</div>
-        <div class="award-description">
-          Certified in creating and editing STAGE objects, querying GeoSpatial data,
-          working with external tables, materialized views, and Parquet data.
-        </div>
-      </div>
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-lake"></i>
+                    </div>
+                    <h3>Snowflake Data Lake Essentials</h3>
+                    <div class="award-issuer">Snowflake</div>
+                    <div class="award-year">December 2024</div>
+                    <div class="award-description">
+                        Certified in creating and editing STAGE objects, querying GeoSpatial data,
+                        working with external tables, materialized views, and Parquet data.
+                    </div>
+                    <a href="https://achieve.snowflake.com/1e8118e5-b638-46c9-b775-db97fd4a66a5?fbclid=IwY2xjawKz7qxleHRuA2FlbQIxMQABHjQdFdqqQLUaViMtA4Zzjr-y9jrxBIC9hJQ8rqzuKWPQnu8DRWKQQZdsMWvp_aem_SSU_fqoUzQQWKzh5G3an5g#acc.DhzngVRj" 
+                       class="certificate-link" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-external-link-alt"></i>View Certificate
+                    </a>
+                </div>
 
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-warehouse"></i>
-        </div>
-        <h3>Snowflake Data Warehouse Essentials</h3>
-        <div class="award-issuer">Snowflake</div>
-        <div class="award-year">October 2024</div>
-        <div class="award-description">
-          Hands-on certification demonstrating proficiency in creating tables and file formats,
-          compute resources, copy into statements, and transforming CSV and JSON data.
-        </div>
-      </div>
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-warehouse"></i>
+                    </div>
+                    <h3>Snowflake Data Warehouse Essentials</h3>
+                    <div class="award-issuer">Snowflake</div>
+                    <div class="award-year">October 2024</div>
+                    <div class="award-description">
+                        Hands-on certification demonstrating proficiency in creating tables and file formats,
+                        compute resources, copy into statements, and transforming CSV and JSON data.
+                    </div>
+                    <a href="https://achieve.snowflake.com/b7792517-f25b-49c9-b507-2205d5716798?fbclid=IwY2xjawKz7qNleHRuA2FlbQIxMQABHq-3O_iaNfnox9r2hNMrTj53aCgPh16WdJCjD_iqyD4VhdiKNXwGeLSD1wzu_aem_86QhZr2wzn9ZnZtWVscjLA#acc.mU18WDH4" 
+                       class="certificate-link" target="_blank" rel="noopener noreferrer">
+                        <i class="fas fa-external-link-alt"></i>View Certificate
+                    </a>
+                </div>
 
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-globe"></i>
-        </div>
-        <h3>8th International Online Conference 2024</h3>
-        <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
-        <div class="award-year">November 2024</div>
-        <div class="award-description">
-          Certificate of Participation in Contemporary Studies in Management (CoSiM) 
-          conference focusing on current management practices and innovations.
-        </div>
-      </div>
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-globe"></i>
+                    </div>
+                    <h3>8th International Online Conference 2024</h3>
+                    <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
+                    <div class="award-year">November 2024</div>
+                    <div class="award-description">
+                        Certificate of Participation in Contemporary Studies in Management (CoSiM) 
+                        conference focusing on current management practices and innovations.
+                    </div>
+                </div>
 
-      <div class="award-item">
-        <div class="award-icon">
-          <i class="fas fa-robot"></i>
+                <div class="award-item">
+                    <div class="award-icon">
+                        <i class="fas fa-robot"></i>
+                    </div>
+                    <h3>Balancing Innovation and Ethics in AI</h3>
+                    <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
+                    <div class="award-year">August 2024</div>
+                    <div class="award-description">
+                        Participated in webinar on "Managing Risks and Ensuring Responsible AI Use in Education"
+                        during Silliman University's 123rd Founders Day celebration.
+                    </div>
+                </div>
+            </div>
         </div>
-        <h3>Balancing Innovation and Ethics in AI</h3>
-        <div class="award-issuer">Silliman University - Dr. Mariano C. Lao Global Studies Center</div>
-        <div class="award-year">August 2024</div>
-        <div class="award-description">
-          Participated in webinar on "Managing Risks and Ensuring Responsible AI Use in Education"
-          during Silliman University's 123rd Founders Day celebration.
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- Projects Section -->
     <section id="projects" class="section" style="background: #f8f9fa">
